--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ development:
   database: blog_development
   pool: 5
   username: root
-  password: alex
+  password:
   socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
